[gd_scene load_steps=3 format=2]

[ext_resource path="res://Arts.gd" type="Script" id=2]
[ext_resource path="res://Equipment.gd" type="Script" id=3]

[node name="AbilityAndEquipmentWindow" type="WindowDialog"]
visible = true
margin_right = 600.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
window_title = "Compendium"
resizable = true

[node name="TabContainer" type="TabContainer" parent="."]
margin_left = 10.0
margin_top = 10.0
margin_right = 590.0
margin_bottom = 490.0

[node name="Arts" type="Tabs" parent="TabContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Arts"]
margin_right = 574.0
margin_bottom = 444.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Arts/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 564.0
margin_bottom = 434.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LineEdit" type="LineEdit" parent="TabContainer/Arts/MarginContainer/VBoxContainer"]
margin_right = 554.0
margin_bottom = 26.0
clear_button_enabled = true
placeholder_text = "Search Text"

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Arts/MarginContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 554.0
margin_bottom = 50.0

[node name="OptionButton" type="OptionButton" parent="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 114.0
margin_bottom = 20.0
text = "Select School"

[node name="OptionButton2" type="OptionButton" parent="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 118.0
margin_right = 225.0
margin_bottom = 20.0
text = "Select Traits"

[node name="OptionButton3" type="OptionButton" parent="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 229.0
margin_right = 288.0
margin_bottom = 20.0
text = "Rank"

[node name="Button" type="Button" parent="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 292.0
margin_right = 427.0
margin_bottom = 20.0
toggle_mode = true
text = "Requirements Met "

[node name="Learned Arts" type="Button" parent="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 431.0
margin_right = 524.0
margin_bottom = 20.0
size_flags_horizontal = 0
toggle_mode = true
text = "Learned Arts"

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Arts/MarginContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 554.0
margin_bottom = 424.0
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_bottom = 370.0

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 4.0
margin_right = 160.0
margin_bottom = 370.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer2/ScrollContainer"]
margin_right = 156.0
margin_bottom = 370.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="Panel" type="Panel" parent="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer2/ScrollContainer/VBoxContainer"]
visible = false
margin_right = 144.0
margin_bottom = 400.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Panel" type="Panel" parent="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer2/ScrollContainer"]
visible = false
margin_right = 156.0
margin_bottom = 370.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.32

[node name="ScrollContainer2" type="ScrollContainer" parent="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 164.0
margin_right = 554.0
margin_bottom = 370.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer2/ScrollContainer2"]
margin_right = 390.0
margin_bottom = 370.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7

[node name="Panel" type="Panel" parent="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer2/ScrollContainer2/VBoxContainer"]
visible = false
margin_right = 484.0
margin_bottom = 380.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7

[node name="RichTextLabel" type="RichTextLabel" parent="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer2/ScrollContainer2/VBoxContainer"]
margin_right = 390.0
margin_bottom = 15.0
fit_content_height = true
scroll_following = true

[node name="LearnArt" type="Button" parent="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer2/ScrollContainer2/VBoxContainer"]
visible = false
margin_top = 19.0
margin_right = 390.0
margin_bottom = 39.0
toggle_mode = true
text = "Lean Art"

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer2/ScrollContainer2/VBoxContainer"]
margin_top = 19.0
margin_right = 390.0
margin_bottom = 19.0

[node name="Panel2" type="Panel" parent="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer2/ScrollContainer2"]
visible = false
margin_right = 390.0
margin_bottom = 370.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7

[node name="HBoxContainer4" type="HBoxContainer" parent="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer2"]
visible = false
margin_left = 636.0
margin_right = 636.0
margin_bottom = 400.0
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer4"]
visible = false
margin_left = 318.0
margin_right = 412.0
margin_bottom = 484.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer4/ScrollContainer"]
margin_right = 94.0
margin_bottom = 484.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3

[node name="ScrollContainer2" type="ScrollContainer" parent="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer4"]
visible = false
margin_left = 427.0
margin_right = 636.0
margin_bottom = 484.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer2/HBoxContainer4/ScrollContainer2"]
margin_right = 209.0
margin_bottom = 484.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7

[node name="Equipment" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Equipment"]
margin_right = 574.0
margin_bottom = 444.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Equipment/MarginContainer"]
margin_right = 574.0
margin_bottom = 444.0

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Equipment/MarginContainer/HBoxContainer"]
margin_right = 147.0
margin_bottom = 444.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.35

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Equipment/MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 147.0
margin_bottom = 26.0

[node name="Label" type="Label" parent="TabContainer/Equipment/MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
visible = false
margin_right = 147.0
margin_bottom = 14.0
text = "Search Text"

[node name="LineEdit" type="LineEdit" parent="TabContainer/Equipment/MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer"]
margin_right = 147.0
margin_bottom = 26.0
clear_button_enabled = true
placeholder_text = "Search Text"

[node name="VBoxContainer2" type="VBoxContainer" parent="TabContainer/Equipment/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 30.0
margin_right = 147.0
margin_bottom = 68.0

[node name="Label" type="Label" parent="TabContainer/Equipment/MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2"]
margin_right = 147.0
margin_bottom = 14.0
text = "Sort by"

[node name="OptionButton" type="OptionButton" parent="TabContainer/Equipment/MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer2"]
margin_top = 18.0
margin_right = 147.0
margin_bottom = 38.0

[node name="VBoxContainer3" type="VBoxContainer" parent="TabContainer/Equipment/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 72.0
margin_right = 147.0
margin_bottom = 110.0

[node name="Label" type="Label" parent="TabContainer/Equipment/MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer3"]
margin_right = 147.0
margin_bottom = 14.0
text = "Item Type"

[node name="OptionButton" type="OptionButton" parent="TabContainer/Equipment/MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer3"]
margin_top = 18.0
margin_right = 147.0
margin_bottom = 38.0

[node name="VBoxContainer5" type="VBoxContainer" parent="TabContainer/Equipment/MarginContainer/HBoxContainer/VBoxContainer"]
visible = false
margin_top = 114.0
margin_right = 147.0
margin_bottom = 152.0

[node name="Label" type="Label" parent="TabContainer/Equipment/MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer5"]
margin_right = 147.0
margin_bottom = 14.0
text = "Requirements Met"

[node name="Button" type="Button" parent="TabContainer/Equipment/MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer5"]
margin_top = 18.0
margin_right = 147.0
margin_bottom = 38.0

[node name="VBoxContainer4" type="VBoxContainer" parent="TabContainer/Equipment/MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 114.0
margin_right = 147.0
margin_bottom = 186.0

[node name="Label" type="Label" parent="TabContainer/Equipment/MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer4"]
margin_right = 147.0
margin_bottom = 14.0
text = "Traits"

[node name="OptionButton" type="OptionButton" parent="TabContainer/Equipment/MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer4"]
visible = false
margin_top = 18.0
margin_right = 147.0
margin_bottom = 38.0

[node name="LineEdit" type="LineEdit" parent="TabContainer/Equipment/MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer4"]
margin_top = 18.0
margin_right = 147.0
margin_bottom = 44.0
clear_button_enabled = true
placeholder_text = "Search Text"

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Equipment/MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer4"]
margin_top = 48.0
margin_right = 147.0
margin_bottom = 72.0

[node name="CheckBox" type="CheckBox" parent="TabContainer/Equipment/MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer4/HBoxContainer"]
margin_right = 45.0
margin_bottom = 24.0
text = "All"

[node name="CheckBox2" type="CheckBox" parent="TabContainer/Equipment/MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer4/HBoxContainer"]
margin_left = 49.0
margin_right = 101.0
margin_bottom = 24.0
text = "Any"

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Equipment/MarginContainer/HBoxContainer"]
margin_left = 151.0
margin_right = 574.0
margin_bottom = 444.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Equipment/MarginContainer/HBoxContainer/ScrollContainer"]
margin_right = 423.0
margin_bottom = 444.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Specialties" type="Tabs" parent="TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[connection signal="tab_selected" from="TabContainer" to="." method="_on_TabContainer_tab_selected"]
[connection signal="item_selected" from="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer/OptionButton" to="TabContainer/Arts" method="schoolOptionPress"]
[connection signal="pressed" from="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer/Learned Arts" to="." method="filterArts"]
[connection signal="pressed" from="TabContainer/Arts/MarginContainer/VBoxContainer/HBoxContainer2/ScrollContainer2/VBoxContainer/LearnArt" to="." method="_on_LearnArt_pressed"]
[connection signal="item_selected" from="TabContainer/Equipment/MarginContainer/HBoxContainer/VBoxContainer/VBoxContainer3/OptionButton" to="TabContainer/Equipment" method="itemOptionPress"]
